# RemoteVoteNG_Backend

./: .env.sample  README.md  db.sqlite3  how d5d57dc --stat  main.py  pyproject.toml  requirements.txt  vercel.json
api/: admin.py  apps.py  auth_backend.py  brevo.py  middleware.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
api/management/: __init__.py
api/management/commands/: seed_data.py
api/migrations/: 0001_initial.py  0002_remove_election_signatures_accreditationapplication_and_more.py  0003_alter_election_options_election_created_at_and_more.py  0004_pollingunit_collation_officer_and_more.py  0005_provision_secretary.py  0006_electoraluser_voter_id.py  0007_electoraluser_date_of_birth.py  0008_election_end_time_election_start_time.py  0009_add_voter_registration_record.py  0009_rename_staff_number_electoraluser_staff_id_and_more.py  0010_alter_electoraluser_email.py  0010_rename_staff_id_electoraluser_staff_number.py  0011_candidate_party_logo.py  0012_merge_20260709_2153.py  0013_rename_staff_id_staffinvitation_staff_number_and_more.py
backend/: settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
